<resources>
    <string name="app_name">TamTam</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="createPassword">Create Password</string>
    <string name="createAccount">Create Account</string>
    <string name="login">Login</string>
    <string name="back">Back</string>
    <string name="data">Lorem Ipsum</string>
    <string name="next">Next</string>
    <string name="email">Email</string>
</resources>