<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/accountEmail"
        android:layout_width="320dp"
        android:layout_height="56dp"
        android:layout_gravity="center_horizontal"
        android:autofillHints=""
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:layout_marginBottom="10dp" />

    <EditText
        android:id="@+id/createUsername"
        android:layout_width="320dp"
        android:layout_height="56dp"
        android:layout_gravity="center_horizontal"
        android:autofillHints=""
        android:hint="@string/username"
        android:inputType="text"
        android:padding="16dp"
        android:layout_marginBottom="10dp" />

    <EditText
        android:id="@+id/createPassword"
        android:layout_width="320dp"
        android:layout_height="56dp"
        android:layout_gravity="center_horizontal"
        android:autofillHints=""
        android:hint="@string/createPassword"
        android:inputType="textPassword"
        android:padding="16dp"
        android:layout_marginBottom="10dp" />

    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="320dp"
        android:layout_height="56dp"
        android:layout_gravity="center_horizontal"
        android:autofillHints=""
        android:hint="@string/confirmPassword"
        android:inputType="textPassword"
        android:padding="16dp"
        android:layout_marginBottom="10dp" />

    <Button
        android:id="@+id/createAccountButton"
        android:layout_width="320dp"
        android:layout_height="56dp"
        android:text="@string/createAccount"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/purple_500"
        android:textColor="@color/white"
        android:bottomRightRadius="15dp"
        android:bottomLeftRadius="15dp"
        android:topLeftRadius="15dp"
        android:topRightRadius="15dp"
        android:layout_marginBottom="10dp">

    </Button>

</LinearLayout>